OCaml 4.03.0:
-------------

(Changes that can break existing programs are marked with a "*")

Language features:
==================

- PR#5528: inline records for constructor arguments
  (Alain Frisch)

- PR#6220, PR#6403, PR#6437, PR#6801:
  Improved redundancy and exhaustiveness checks for GADTs.
  Namely, the redundancy checker now checks whether the uncovered pattern
  of the pattern is actually inhabited, exploding at most one wild card.
  This is also done for exhaustiveness when there is only one case.
  Additionally, one can now write unreachable cases, of the form
  "pat -> .", which are treated by the redundancy check.
  (Jacques Garrigue)

- PR#6374: allow "_ t" as a short-hand for "(_, _, ..) t" for n-ary type
  constructors
  (Alain Frisch)

- PR#6714: allow [@@ocaml.warning] on most structure and signature items:
  values, modules, module types
  (whitequark)

- PR#6806: Syntax shortcut for putting a type annotation on a record field:
  { f1 : typ = e } is sugar for { f1 = (e : typ) }
  { f1 : typ } is sugar for { f1 = (f1 : typ) }
  (Valentin Gatien-Baron, review by Jérémie Dimino)

- PR#6806: Allow type annotations before the "->" in "fun <args> -> <expr>"
  fun x y : (int * int) -> (x, y)
  (Valentin Gatien-Baron, review by Jérémie Dimino)

- GPR#26: support for "(type a b)" as syntactic sugar for "(type a) (type b)"
  (Gabriel Scherer)

- GPR#42: short functor type syntax: "S -> T" for "functor (_ : S) -> T"
  (Leo White)

- GPR#88: allow field punning in object copying expressions:
  {< x; y; >} is sugar for {< x = x; y = y; >}
  (Jeremy Yallop)

- GPR#112: octal escape sequences for char and string literals
  "Make it \o033[1mBOLD\o033[0m"
  (Rafaël Bocquet, request by John Whitingthon)

- GPR#167: allow to annotate externals' arguments and result types so
  they can be unboxed or untagged: [@unboxed], [@untagged]. Supports
  untagging int and unboxing int32, int64, nativeint and float.
  (Jérémie Dimino, Mark Shinwell)
