@@ -93,13 +93,13 @@ FLAMBDA=false
 BYTECC=$(TOOLPREF)gcc
 
 ### Additional compile-time options for $(BYTECC).  (For static linking.)
-BYTECCCOMPOPTS=-O -mms-bitfields -Wall -Wno-unused
+BYTECCCOMPOPTS=-D__USE_MINGW_ANSI_STDIO=0 -O -mms-bitfields -Wall -Wno-unused
 
 ### Additional link-time options for $(BYTECC).  (For static linking.)
 BYTECCLINKOPTS=
 
 ### Additional compile-time options for $(BYTECC).  (For building a DLL.)
-DLLCCCOMPOPTS=-O -mms-bitfields -Wall -Wno-unused -DCAML_DLL
+DLLCCCOMPOPTS=-D__USE_MINGW_ANSI_STDIO=0 -O -mms-bitfields -Wall -Wno-unused -DCAML_DLL
 
 ### Libraries needed
 BYTECCLIBS=-lws2_32
@@ -163,7 +163,7 @@ SYSTEM=mingw
 NATIVECC=$(BYTECC)
 
 ### Additional compile-time options for $(NATIVECC).
-NATIVECCCOMPOPTS=-O -mms-bitfields -Wall -Wno-unused
+NATIVECCCOMPOPTS=-D__USE_MINGW_ANSI_STDIO=0 -O -mms-bitfields -Wall -Wno-unused
 
 ### Additional link-time options for $(NATIVECC)
 NATIVECCLINKOPTS=
